erDiagram
    COMPANY ||--o{ REGION : has
    COMPANY ||--o{ STORE : owns
    REGION ||--o{ STORE : groups
    COMPANY ||--o{ EMPLOYEE : employs
    COMPANY ||--o{ POSITION : defines
    EMPLOYEE ||--o{ EMPLOYEE_ASSIGNMENT_HISTORY : receives
    STORE ||--o{ EMPLOYEE_ASSIGNMENT_HISTORY : hosts
    REGION ||--o{ EMPLOYEE_ASSIGNMENT_HISTORY : scopes
    POSITION ||--o{ EMPLOYEE_ASSIGNMENT_HISTORY : uses
    EMPLOYEE ||--o{ USER_ACCOUNT : links
    USER_ACCOUNT ||--o{ USER_ROLE_ASSIGNMENT : gets
    ROLE ||--o{ USER_ROLE_ASSIGNMENT : assigns
    ROLE ||--o{ ROLE_PERMISSION : maps
    PERMISSION ||--o{ ROLE_PERMISSION : maps
    COMPANY ||--o{ CHECKLIST_TEMPLATE : owns
    CHECKLIST_TEMPLATE ||--o{ CHECKLIST_TEMPLATE_ITEM : contains
    CHECKLIST_TEMPLATE ||--o{ CHECKLIST_INSTANCE : instantiates
    CHECKLIST_INSTANCE ||--o{ CHECKLIST_RESPONSE : records
    KPI_DEFINITION ||--o{ KPI_TARGET : targets
    KPI_DEFINITION ||--o{ KPI_ACTUAL : measures
    COMPANY ||--o{ PERFORMANCE_REVIEW_PERIOD : defines
    PERFORMANCE_REVIEW_PERIOD ||--o{ EMPLOYEE_PERFORMANCE_REVIEW : contains
    COMPANY ||--o{ WORKFORCE_NORM_PLAN : plans
    EMPLOYEE ||--o{ TURNOVER_EVENT : triggers
    SNAPSHOT_RUN ||--o{ STORE_WORKFORCE_SNAPSHOT : produces
    SNAPSHOT_RUN ||--o{ STORE_KPI_SNAPSHOT : produces
    SNAPSHOT_RUN ||--o{ STORE_CHECKLIST_SNAPSHOT : produces
    SNAPSHOT_RUN ||--o{ TURNOVER_SNAPSHOT : produces
    INTEGRATION_SOURCE ||--o{ IMPORT_BATCH : feeds
    IMPORT_BATCH ||--o{ EMPLOYEE_RAW : loads
    IMPORT_BATCH ||--o{ STORE_RAW : loads
    IMPORT_BATCH ||--o{ KPI_RAW : loads
    INTEGRATION_SOURCE ||--o{ EXTERNAL_ID_MAP : maps
    USER_ACCOUNT ||--o{ EVENT_LOG : acts
    USER_ACCOUNT ||--o{ ENTITY_CHANGE_LOG : changes
